--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-session": "^1.18.0",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "pg": "^8.11.4",
     "swagger-jsdoc": "^1.3.0"
